force-app/main/default/objects/Freight_RecordTypeSeggregation__c/Freight_RecordTypeSeggregation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting designed for Segregation of Trigger Logic based on Record types.</description>
    <label>Freight_RecordTypeSeggregation</label>
</CustomObject>