force-app/main/default/objects/Freight_RecordTypeSeggregation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>It will be used to categorized recordtype as Sales Passenger or Freight.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>