force-app/main/default/objects/Freight_RecordTypeSeggregation__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ObjectType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>