force-app/main/default/objects/Freight_RecordTypeSeggregation__c/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <description>It will contain 18 digit Id of RecordType.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>